bb-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-pod
spec:
  containers:
  - name: busybox-container
    image: busybox
    # command: ["printenv"]
    # args: ["HOSTNAME", "KUBERNETES_PORT"]
    command: ["sh"]
    # args: ["-c", "while true; do echo hello; sleep 5; done"]
    args: ["-c", "sleep 1000"]
