myapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  my-app
  namespace: default
  labels:
    app:  my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app:  my-app
    spec:
      containers:
      - name:  my-app
        image:  busybox:1.28
        command: ['sh', '-c', "printenv MYSQL_USER MYSQL_PWD MYSQL_SERVER; sleep 10"]
