mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: my-db
    labels:
        app: my-db
spec:
    replicas: 1
    selector: 
        matchLabels:
            app: my-db
    template:
        metadata:
            labels:
                app: my-db
        spec:
            containers:
            - name: mysql
              image: mysql:8.0
              volumeMounts:
              - name: db-data
                mountPath: "/var/lib/mysql"   
            volumes:
            - name: db-data
              persistentVolumeClaim:
                claimName: mysql-data-pvc
