pod-interpod-affinity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  my-app-deployment
spec:
  replicas: 5
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app:  myapp
    spec:
      containers:
      - name: myapp-container
        image: nginx:1.20
      nodeSelector:
        type: master
      tolerations:
      - effect: NoExecute
        operator: Exists
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - etcd
            topologyKey: topology.kubernetes.io/hostname
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: security
                operator: In
                values:
                - S2
            topologyKey: topology.kubernetes.io/hostname
