pod-with-tolerations.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-toleration
  labels:
    env: test
spec:
  containers:
  - name: nginx
    image: nginx
  tolerations:
  - effect: NoExecute
    operator: Exists
  nodeName: master
